--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.3.6",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "^52.0.6",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
+    "expo-local-authentication": "^15.0.1",
     "expo-router": "~4.0.5",
+    "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.9",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
@@ -28,9 +31,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-svg": "^15.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.3.2"
