--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cmVhZHktd2VyZXdvbGYtNzMuY2xlcmsuYWNjb3VudHMuZGV2JA
+DATABASE_URL=postgresql://neondb_owner:D4EOZqkmjon5@ep-patient-silence-a51wdkvp.us-east-2.aws.neon.tech/neondb?sslmode=require
+EXPO_PUBLIC_SERVER_URL = https://uber.com/ 
+EXPO_PUBLIC_GEOAPIFY_API_KEY=aa29cda8d0154723a09194c0d071c0e4
+EXPO_PUBLIC_GOOGLE_API_KEY=AIzaSyAZyXZXn76YgKEEt5HBO7usy1QQPfFNefc
+
