--- a/app.json
+++ b/app.json
@@ -23,10 +23,18 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "origin": "https://uber.com/"
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
