--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.3.6",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.0.6",
+    "@neondatabase/serverless": "^0.10.3",
     "@react-navigation/native": "^6.0.2",
     "expo": "^52.0.6",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
     "expo-local-authentication": "^15.0.1",
+    "expo-location": "^18.0.2",
     "expo-router": "~4.0.5",
     "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.9",
@@ -31,6 +34,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "^1.20.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -38,7 +46,8 @@
     "react-native-svg": "^15.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
