--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@clerk/clerk-expo": "^2.3.6",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
-    "@neondatabase/serverless": "^0.10.3",
+    "@neondatabase/serverless": "^0.10.4",
     "@react-navigation/native": "^6.0.2",
+    "@stripe/stripe-react-native": "^0.40.0",
+    "dotenv": "^16.4.7",
     "expo": "^52.0.6",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
@@ -46,6 +48,7 @@
     "react-native-svg": "^15.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
+    "stripe": "^17.4.0",
     "tailwindcss": "^3.3.2",
     "zustand": "^5.0.1"
   },
